# r3nz-database-mcp

./: .env.example  .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  clippy.toml
.claude-plugin/: marketplace.json  plugin.json
scripts/: install.sh
src/: lib.rs  main.rs
src/cache/: mod.rs
src/config/: mod.rs
src/database/: connection.rs  connection_string.rs  mod.rs  mssql.rs  pool.rs  postgres.rs  result.rs  traits.rs
src/error/: mod.rs
src/protocol/: handler.rs  mod.rs  server.rs  transport.rs  types.rs
src/security/: mod.rs  rate_limiter.rs  validator.rs
src/server/: handler.rs  mod.rs  state.rs
src/tools/: connection.rs  export.rs  mod.rs  performance.rs  query.rs  registry.rs  schema.rs
