[package]
name = "r3nz-database-mcp"
version = "0.1.0"
edition = "2024"
authors = ["R3nzTheCodeGOD <r3nzthecodegod@gmail.com>"]
description = "MCP server for AI-powered database analysis. Connect Claude to MSSQL & PostgreSQL using natural language."
license = "MIT"
repository = "https://github.com/R3nzTheCodeGOD/r3nz-database-mcp"
homepage = "https://github.com/R3nzTheCodeGOD/r3nz-database-mcp"
keywords = ["mcp", "database", "ai", "rust", "mssql", "postgresql", "claude"]
categories = ["database", "development-tools"]

[features]
default = ["mssql", "postgres"]
mssql = ["dep:tiberius", "dep:bb8", "dep:bb8-tiberius"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
full = ["mssql", "postgres"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
dashmap = "6.1.0"
native-tls = "0.2.14"
once_cell = "1.21.3"
parking_lot = "0.12.5"
regex = "1.12.2"
rust_decimal = { version = "1.40.0", features = ["serde"] }
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tokio-native-tls = "0.3.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

# Optional: MSSQL support
bb8 = { version = "0.9.1", optional = true }
bb8-tiberius = { version = "0.16.0", optional = true }
tiberius = { version = "0.12.3", default-features = false, features = ["tokio", "chrono", "rust_decimal", "tds73", "native-tls"], optional = true }

# Optional: PostgreSQL support
deadpool-postgres = { version = "0.14.1", optional = true }
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4", "with-uuid-1"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio-test = "0.4.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# Enable lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Restriction lints (important for production)
dbg_macro = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
allow_attributes_without_reason = "warn"

# Cargo lints
wildcard_dependencies = "warn"

# Disabled (too noisy or not applicable)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
cast_precision_loss = "allow"
needless_raw_string_hashes = "allow"
redundant_pub_crate = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
unused_self = "allow"
future_not_send = "allow"
unwrap_used = "allow"
expect_used = "allow"
non_std_lazy_statics = "allow"

# Builder pattern and style lints
return_self_not_must_use = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
cast_lossless = "allow"
wildcard_imports = "allow"
manual_is_variant_and = "allow"
needless_pass_by_value = "allow"
match_same_arms = "allow"
needless_lifetimes = "allow"
redundant_clone = "allow"
match_wildcard_for_single_variants = "allow"
unreadable_literal = "allow"
bool_to_int_with_if = "allow"
map_unwrap_or = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
elidable_lifetime_names = "allow"

# Unstable nursery lints (disabled)
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
option_if_let_else = "allow"

# Cargo metadata
cargo_common_metadata = "allow"
